# concurrency-theory-course

./: README.md
data/: philosopher-simulation.arbiter.csv  philosopher-simulation.asymmetric.csv  philosopher-simulation.double-check.csv  philosopher-simulation.naive.csv
lab1/boxplot/: boxplot.py
lab1/src/: BinarySemaphore.java  Counter.java  CountingSemaphore.java  DecrementThread.java  IncrementThread.java  Main.java  SemaphoreSynchronizedCounter.java  SynchronizedCounter.java
lab1/src/lab1/: BinarySemaphore.java  Counter.java  CountingSemaphore.java  DecrementThread.java  IncrementThread.java  MainLab1.java  SemaphoreSynchronizedCounter.java  SynchronizedCounter.java
lab1/src/lab2/: Arbiter.java  ArbiterPhilosopher.java  AsymmetricPhilosopher.java  BinarySemaphore.java  DoubleCheckPhilosopher.java  MainLab2.java  NaivePhilosopher.java  NaiveSimulation.java  Philosopher.java  PhilosopherSimulation.java  Stick.java  TwoChopstickCheckPhilosopher.java
lab1/src/lab4/: Arbiter.java  ArbiterPhilosopher.java  AsymmetricPhilosopher.java  DoubleCheckPhilosopher.java  MainLab4.java  NaivePhilosopher.java  Philosopher.java  PhilosopherSimulation.java  Stick.java
lab1/src/lab6/: MainLab6.java  PerformanceTest.java  Reader.java  SynchronizedList.java  Writer.java
lab1/src/lab7/: GaussJordan.java  Main.java  MatrixReader.java  MatrixTaskA.java  (+6 more)
lab5/: main.py
lab7/: gauss-zuk-szymon.tex
lab7/gauss-jordan-cuda/: CMakeLists.txt
lab7/gauss-jordan-cuda/src/: cuda_utils.cuh  gauss_jordan.cu  gauss_jordan.cuh  io_utils.cu  io_utils.cuh  kernels.cu  kernels.cuh  main.cu
